--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,5 +3,7 @@ version: 0.1.0
 author: Philipp Schiffmann <philippschiffmann93@gmail.com>
 description: Simulates verbose flag behavior for regular expressions in Dart.
 homepage: https://github.com/elaru/verbose-regexp
+dependencies:
+  analyzer: '^0.27.1'
 dev_dependencies:
   test: '^0.12.0'
