--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: verbose_regexp
-version: 1.0.0
+version: 1.0.0+1
 author: Philipp Schiffmann <philippschiffmann93@gmail.com>
 description: Simulates verbose flag behavior for regular expressions in Dart.
 homepage: https://github.com/pschiffmann/verbose-regexp.dart
